--- a/src/scss/brand/components/green-bg-title/_index.scss
+++ b/src/scss/brand/components/green-bg-title/_index.scss
@@ -1,4 +1,4 @@
-.green-bar {
+.heading-bg-strip {
   background: var(--bg-color-2) !important;
   display: block;
   width: 100vw;
@@ -31,7 +31,7 @@
 }
 
 .planet-people-hero {
-  .green-bar {
+  .heading-bg-strip {
     margin-left: -2rem;
     padding-left: 2rem;
     height: 88px;
