--- a/src/scss/brand/components/overlap-title/_index.scss
+++ b/src/scss/brand/components/overlap-title/_index.scss
@@ -1,24 +1,24 @@
 .overlapping-title {
-    .bod-title{
-        position: absolute;
-        top: -10px; 
-        &::after {
-            content: "";
-            background-color: $color-primary;
-            background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png);
-            position: absolute;
-            background-size: 20px;
-            background-repeat: no-repeat;
-            right: 2px;
-            bottom: 2px;
-            top: initial;
-            left: initial;
-            height: 72px;
-            width: 72px;
-            background-position: center;
-            outline: 2px solid $color-primary;
-        }
+  .bod-title {
+    position: absolute;
+    top: -10px;
+    &::after {
+      content: '';
+      background-color: $color-primary;
+      background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png);
+      position: absolute;
+      background-size: 20px;
+      background-repeat: no-repeat;
+      right: 2px;
+      bottom: 2px;
+      top: initial;
+      left: initial;
+      height: 72px;
+      width: 72px;
+      background-position: center;
+      outline: 2px solid $color-primary;
     }
+  }
 }
 
 // .overlapping-title {
