--- a/src/scss/default/components/searchbox-results/_index.scss
+++ b/src/scss/default/components/searchbox-results/_index.scss
@@ -16,7 +16,7 @@
         box-shadow: 0px 16px 40px -8px #0000001a;
       }
     }
-    .search-query {
+    input.search-query {
       display: block !important;
       background: $color-grey-3;
       height: 48px;
