carosoul slider changes

--- a/src/scss/brand/components/accessibility/_index.scss
+++ b/src/scss/brand/components/accessibility/_index.scss
@@ -92,6 +92,9 @@ button {
         .lSAction {
           a {
             margin-top: 2px;
+            @include sd{
+              margin-top: -1rem;
+            }
           }
         }
       }
