--- a/src/scss/brand/components/fonts/_index.scss
+++ b/src/scss/brand/components/fonts/_index.scss
@@ -16,3 +16,10 @@
   text-align: justify;
   color: $color-white !important;
 }
+
+a{
+  font-size: inherit;
+  font-weight: inherit;
+  color: inherit;
+  line-height: inherit;
+}
