--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -698,26 +698,23 @@
         a {
           &.lSPrev {
             background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/navigation-left-white.png');
-            width: 80px;
-            height: 80px;
-            right: 106px;
-            @include sd {
-              width: 56px;
-              height: 56px;
-              right: 80px;
-            }
-            @include xs {
-              right: 60px;
+            width: 56px;
+            height: 56px;
+            right: 75px;
+            @include md {
+              width: 80px;
+              height: 80px;
+              right: 106px;
             }
           }
           &.lSNext {
             background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/navigation-right-white.png');
+            width: 56px;
+            height: 56px;
+          @include md {
             width: 80px;
             height: 80px;
-            @include sd {
-              width: 56px;
-              height: 56px;
-            }
+          }
           }
         }
       }
