--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -62,6 +62,10 @@
     background-repeat: no-repeat;
   }
   .diversity-right-area {
+    padding-top: 3rem;
+    @include md{
+      padding-top: 10rem;
+    }
     .white-line-repeats {
       display: none;
       position: absolute;
@@ -85,6 +89,12 @@
     }
   }
   .diversity-area {
+    padding-top: 7rem;
+
+    @include md{
+      padding-top: 14rem;
+      z-index: 1;
+    }
     .diversity-area-heading {
       height: 62px;
       line-height: 62px;
@@ -97,5 +107,16 @@
     .diversity-area-content {
       padding-right: 0;
     }
+  }
+}
+
+
+
+// who whe are slider csss
+
+.stories-around {
+  width: 50%;
+  @include sm{
+    width: auto
   }
 }
