--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -76,7 +76,7 @@
       position: absolute;
       width: 67px;
       top: 2.4rem;
-      left: -4.2rem;
+      left: -5rem;
       z-index: 0;
       @include sd{
         display: block;
@@ -115,7 +115,7 @@
     .diversity-area-content {
       padding-right: 0;
       @include md{
-
+        padding-right: 6rem;
       }
     }
   }
