--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -49,12 +49,12 @@
       }
       @include md {
         margin-top: auto;
-        top: -1.5rem
+        top: -1.5rem;
       }
-      @include lg{
+      @include lg {
         display: inline-block !important;
         margin-top: auto;
-        top:auto;
+        top: auto;
       }
     }
   }
@@ -68,7 +68,7 @@
   }
   .diversity-right-area {
     padding-top: 3rem;
-    @include md{
+    @include md {
       padding-top: 9.5rem;
     }
     .white-line-repeats {
@@ -78,7 +78,7 @@
       top: 2.4rem;
       left: -4.2rem;
       z-index: 0;
-      @include sd{
+      @include sd {
         display: block;
       }
     }
@@ -92,7 +92,7 @@
         line-height: 64px;
       }
     }
-    .diversity-percentage-content{
+    .diversity-percentage-content {
       margin-top: 0 0 2.5rem 0;
     }
   }
@@ -114,8 +114,7 @@
     }
     .diversity-area-content {
       padding-right: 0;
-      @include md{
-
+      @include md {
       }
     }
   }
