--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -188,6 +188,7 @@ header {
         }
         ul.navigation-level1 {
           li.navigation-item {
+            padding: 0 1rem;
             a {
               color: $color-black !important;
               font-size: $font-size-16 !important;
