--- a/src/scss/brand/components/fonts/_index.scss
+++ b/src/scss/brand/components/fonts/_index.scss
@@ -16,12 +16,18 @@
   color: $color-white !important;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-  a{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  a {
     font-size: inherit;
-  font-weight: inherit;
-  color: inherit;
-  line-height: inherit;
-  padding: inherit;
+    font-weight: inherit;
+    color: inherit;
+    line-height: inherit;
+    padding: inherit;
   }
 }
