footer css changes

--- a/src/scss/brand/components/footer/_index.scss
+++ b/src/scss/brand/components/footer/_index.scss
@@ -175,6 +175,12 @@
       }
     }
   }
+  .footer-column{
+    padding: 2rem 1rem;
+    @include md{
+      padding: 4rem 2rem;
+    }
+  }
 }
 
 .social-link-section {
