--- a/src/scss/brand/components/overlap-content/_index.scss
+++ b/src/scss/brand/components/overlap-content/_index.scss
@@ -8,17 +8,19 @@
   -webkit-box-shadow: 0px 16px 40px -8px #0000001a;
   box-shadow: 0px 16px 40px -8px #0000001a;
   background-color: $color-white;
-
   @include sm {
     left: 0;
   }
-  .sm-btn {
-    display: block;
+  .sd-btn{
+    display: none;
     @include md {
-      display: none;
+      display: block;
     }
   }
-  @include sd {
+  @include md {
+    .sm-btn{
+      display: none;
+    }
     position: absolute;
     right: 0;
     top: 50%;
