--- a/src/scss/brand/components/green-bg-title/_index.scss
+++ b/src/scss/brand/components/green-bg-title/_index.scss
@@ -1,32 +1,37 @@
 .heading-bg-strip {
-  background: var(--bg-color-2) !important;
-  display: block;
-  width: 100vw;
-  position: relative;
-  height: 100%;
-  @extend .font-bold;
-  @extend .line-height-125;
-  &:before {
-    content: '';
-    width: 100%;
+  span {
     background: var(--bg-color-2) !important;
     display: block;
+    width: 80%;
+    position: relative;
     height: 100%;
-    position: absolute;
-    left: -100%;
-    top: 100%;
-    z-index: -1;
-  }
-  &:after {
-    content: '';
-    width: 100%;
-    background: var(--bg-color-2) !important;
-    display: block;
-    height: 100%;
-    position: absolute;
-    right: -100%;
-    top: -100%;
-    z-index: -1;
+    @extend .font-bold;
+    @include sm {
+      width: 100%;
+    }
+    &:before {
+      content: '';
+      width: 100%;
+      background: var(--bg-color-2) !important;
+      display: block;
+      height: 100%;
+      position: absolute;
+      left: -100%;
+      top: 0;
+      
+      z-index: -1;
+    }
+    &:after {
+      content: '';
+      width: 200%;
+      background: var(--bg-color-2) !important;
+      display: block;
+      height: 100%;
+      position: absolute;
+      right: -200%;
+      top: -100%;
+      z-index: -1;
+    }
   }
 }
 
