--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -104,4 +104,12 @@
     color: #c30000 !important;
   }
 }
+.default-visible-hidden{
+  display: none;
+}
+.label-form{
+  margin: 0.75rem 0;
+  font-size: 1.5rem !important;
+  line-height: 120% !important;
+}
 /* contact form end */
