--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1,10 +1,15 @@
 // Who we are page
 .bottom-right-box {
+  background-color: $color-primary;
   position: relative;
+  padding: 2rem 1rem;
   @include sd {
     position: absolute;
     bottom: 0;
     right: 0;
+  }
+  @include md{
+    padding: 2rem;
   }
 }
 
