--- a/src/scss/brand/components/overlap-title/_index.scss
+++ b/src/scss/brand/components/overlap-title/_index.scss
@@ -1,24 +1,10 @@
-.overlapping-title {
+.card-content-wrapper {
   position: relative;
-  .bod-title {
+  .card-content {
     position: absolute;
-    top: -10px;
-  }
-  &::after {
-    content: '';
-    background-color: $color-primary;
-    background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png);
-    position: absolute;
-    background-size: 20px;
-    background-repeat: no-repeat;
-    right: 2px;
-    bottom: 2px;
-    top: initial;
-    left: initial;
-    height: 72px;
-    width: 72px;
-    background-position: center;
-    outline: 2px solid $color-primary;
+    top: 0;
+    padding: 2rem;
+    color: $color-2;
   }
   .overlapping-text {
     position: absolute;
@@ -35,6 +21,25 @@
   }
 }
 
+.bottom-right-arrow{
+  position: relative;
+  &::after {
+    content: '';
+    background-color: $color-primary;
+    background-image: url(/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/black-arrow-right.png);
+    position: absolute;
+    background-size: 20px;
+    background-repeat: no-repeat;
+    right: 2px;
+    bottom: 2px;
+    top: initial;
+    left: initial;
+    height: 72px;
+    width: 72px;
+    background-position: center;
+    outline: 2px solid $color-primary;
+  }
+}
 // .overlapping-title {
 //   .richText.component {
 //     position: absolute;
